--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <div>
-            <img src="blaze-carro-png.jpg">
+            <img src="blaze-carro-png">
         </div>
     </section>
     <section>
@@ -18,7 +18,6 @@
     <div></div>
     <div></div>
     <div></div>
-
 
     </div>
     </section>
