--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <div>
-            <img src="blaze-carro-png">
+            <img src="blaze-carro-png.jpg"
         </div>
     </section>
     <section>
