--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style,css">
-    <title>💯ia.fofa🦊</title>
+    <title>ia-fofa-rs🦊</title>
 </head>
 <body>
     <section>
-        <div>
-            <img src="blaze-carro-png.jpg"
+        <div class="imagem-principal">
+            <img src="blaze-carro-png.jpg">
         </div>
-    </section>
-    <section>
-    <div>
-     <h1> você pode ṕerguntar para a ia.fofa💯</h1>
+  </section>
+      <section>
+    <div class="caixa-principal">
+     <h1> você pode ṕerguntar para a <ia-fofa-rs/h1>
+        <div></div>
     <div></div>
-    <div></div>
-    <div></div>
+       <div></div>
 
     </div>
     </section>
